--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ header h1 {
   margin-left: 10px;
 }
 
+.edit-mode {
+  color: #ccc;
+}
+
 .container {
   max-width: 500px;
   margin: 30px auto;
